--- a/wiki/DistributedEventBrokerTutorial.wiki
+++ b/wiki/DistributedEventBrokerTutorial.wiki
@@ -12,7 +12,7 @@ eventBroker.AddDistributedExtension(extension);
 }}}
 
 == Transport layers ==
-The sections below are not meant to serve as an introduction into the specific transport layer. For transport layer specific setup, read the documentation pages provided by the project owners.
+The sections below are not meant to serve as an introduction into the specific transport layers. For transport layer specific setup, read the documentation pages provided by the project owners.
 === NServiceBus ===
 {{{
 IBus bus = // Get IBus instance
