Edited wiki page DistributedEventBrokerTutorial through web user interface.

--- a/wiki/DistributedEventBrokerTutorial.wiki
+++ b/wiki/DistributedEventBrokerTutorial.wiki
@@ -38,9 +38,14 @@ eventBroker.AddDistributedExtension(extension);
 }}}
 
 Make sure the `RhinoEsbEventFiredHandler` is registered in the windsor container.
+
+
+
 == Scoping & Identification ==
+
 === Distributed Event Broker Identification ===
-The distributed event broker identification allows to bound several event brokers together. Only events fired in the same context are recognized from the event brokers participating in the context. That allows having several distributed event brokers in one application.
+
+The distributed event broker identification allows to bind several event brokers together. Only events fired in the same context are recognized from the event brokers participating in the context. That allows to have several distributed event brokers in one application.
 
 Example (here with NServiceBus Transport):
 {{{
