--- a/wiki/Build.wiki
+++ b/wiki/Build.wiki
@@ -2,23 +2,21 @@
 
 = Introduction =
 
-You can build your own copy of bbv.Common from the sources provided in the download area.
+You can build your own copy of bbv.Common from the sources provided on GitHub.
 
-There is no direct access to the subversion server where the sources are hosted from the internet.
+= Steps for building bbv.Common =
 
-
-= Steps for building bbv.Common or bbv.Common.Contrib =
-
- # download the sources from the download area.
- # extract the sources to a local drive
+ # download the sources from GitHub.
  # run the integrate.bat script found in the folder Scripts
 
-This results in a release build without the version 0.0.0.0.
+This results in a release build with version 0.0.0.0.
 
-You cannot build a versioned release of bbv.Common directly by executing publish.bat in the Scripts folder because this script needs access to the svn repository, which is only granted to employees of bbv Software Services AG.
+You can build a versioned release of bbv.Common directly by executing publish.bat in the Scripts folder. This also creates the NuGet packages.
+
 
 = Setup your development environment =
-To be able to work on bbv.Common or bbv.Common.Contrib sources you have to install the following software packages in this order.
+
+To be able to work on bbv.Common sources you have to install the following software packages in this order.
 
  # Visual Studio 2010 Premium including the Web Developer Tools
  # Silverlight 4 Toolkit [http://silverlight.codeplex.com/releases/view/43528 Download]
