Edited wiki page DefaultSideBar through web user interface.

--- a/wiki/DefaultSideBar.wiki
+++ b/wiki/DefaultSideBar.wiki
@@ -1,5 +1,5 @@
   * [Overview]
-  * [ProjectRoadMap Project road Map]
+  * [ProjectRoadMap Project Road Map]
   * [ReleaseNotes Release Notes]
   * [VersionConcept Version Concept]
   * Components
