Edited wiki page DefaultSideBar through web user interface.

--- a/wiki/DefaultSideBar.wiki
+++ b/wiki/DefaultSideBar.wiki
@@ -9,6 +9,7 @@
     * Events
       * [EventBroker Event Broker]
       * [DistributedEventBroker Distributed Event Broker]
+      * [MappingEventBroker Mapping Event Broker]
     * [StateMachine Hierarchical State Machine]
     * Multi-Threading
       * [AsyncModule Asynchrous Modules]
