Edited wiki page MappingEventBroker through web user interface.

--- a/wiki/MappingEventBroker.wiki
+++ b/wiki/MappingEventBroker.wiki
@@ -3,4 +3,6 @@
 
 = Documentation =
 
-For basic usage please see EventBroker and EventBrokerTutorial 
+For basic usage please see EventBroker and EventBrokerTutorial
+
+[MappingEventBrokerTutorial Tutorial]
