Edited wiki page MappingEventBrokerTutorial through web user interface.

--- a/wiki/MappingEventBrokerTutorial.wiki
+++ b/wiki/MappingEventBrokerTutorial.wiki
@@ -3,7 +3,7 @@
 == Setup of the distributed event broker ==
 The usage of the mapping event broker is astonishingly simple once you have setup your mapping technology. Basically it is only two lines of code.
 {{{
-// Use existing event broker or create special one for distributed events
+// Use existing event broker or create special one for events which need to be mapped
 var eventBroker = new EventBroker();
 
 // Use extension method AddMappingExtension
