--- a/wiki/MappingEventBroker.wiki
+++ b/wiki/MappingEventBroker.wiki
@@ -1,5 +1,11 @@
 #summary A powerful event broker extension which allows to map source events to destination events.
 = Features =
+  * Remap your existing events a few lines of code!
+  * Transparently integrates into your existing usage of the event broker
+  * Adapters for major .NET mapping technologies
+    * AutoMapper
+    * more to come
+  * Convention based mapping
 
 = Documentation =
 
