--- a/wiki/Bootstrapper.wiki
+++ b/wiki/Bootstrapper.wiki
@@ -9,4 +9,6 @@
    * Unobtrusive Key/Value pair configuration section support with behavior.
    * Thorough reporting of application startup and shutdown behavior.
 
+_For a quick introduction see the [BootstrapperTutorial Tutorial]._
+
 = Documentation =
