Edited wiki page Bootstrapper through web user interface.

--- a/wiki/Bootstrapper.wiki
+++ b/wiki/Bootstrapper.wiki
@@ -17,6 +17,7 @@ When building a new application the bootstrapper is essentially the only root ob
 == Extensions ==
 Extensions contain methods which are called upon startup and shutdown of the bootstrapper. The methods of the extensions are extension points which can consume information gathered during the bootstrapping process for example configuration. Extensions are added directly on the bootstrapper.
 == Behaviors ==
+Behaviors allow extending the bootstrapping process in an aspect oriented style. Behaviors gain access to extensions which are participating in the bootstrapper process and can therefore influence them for example by injecting additional runtime information into an extension.
 == Strategy ==
 == Executors ==
 == Configuration Support ==
