Edited wiki page Bootstrapper through web user interface.

--- a/wiki/Bootstrapper.wiki
+++ b/wiki/Bootstrapper.wiki
@@ -10,7 +10,8 @@
    * Thorough reporting of application startup and shutdown behavior.
 
 _For a quick introduction see the [BootstrapperTutorial Tutorial]._
-_For the specification see the [BootstrapperSpecification Specification]
+
+_For the specification see the [BootstrapperSpecification Specification]_
 
 = Documentation =
 == Bootstrapper ==
