Edited wiki page Bootstrapper through web user interface.

--- a/wiki/Bootstrapper.wiki
+++ b/wiki/Bootstrapper.wiki
@@ -24,5 +24,9 @@ Behaviors allow extending the bootstrapping process in an aspect oriented style.
 The strategy defines the order of execution for extension points and behaviors. The strategy is also the context provider for context information which needs to be passed to the extension points. The strategy allows to hooking in custom executors and reporting context.
 == Executors ==
 Executors are responsible for executing extension points on extensions and the behaviors attached to it. Different executors can be used for the startup and shutdown phase of the application.
-== Configuration Support ==
+== Core behaviors ==
+The bootstrapper package ships with some core behaviors which can be plugged into your bootstrapping mechanism. Core behaviors include 
+  * Support to automatically load configuration sections
+  * Support for bootstrapper configuration sections which are basically key/value pairs and their values get automatically propagated to properties of extensions
+  * Support to automatically dispose extensions which implement IDisposable
 == Reporting ==
