--- a/wiki/DistributedEventBrokerTutorial.wiki
+++ b/wiki/DistributedEventBrokerTutorial.wiki
@@ -155,4 +155,4 @@ topic.Uri.StartsWith("distributed://", StringComparison.Ordinal);
 
 The strategy above would only accept event publications where the topic URI starts with distributed://. All other publications would not be published on the transport layer.
 == Restrictions ==
-Currently only asynchronous handling of publications is allowed!
+Synchronous subscription of events which are fired on the distributed event broker is not allowed. In our point of view this makes no sense and would couple the distributed event broker too tight to its participants in the network. Therefore all publications must use asynchronous handler restrictions.
