--- a/wiki/BootstrapperTutorial.wiki
+++ b/wiki/BootstrapperTutorial.wiki
@@ -6,5 +6,17 @@ To get started with the bootstrapper you need the following three things:
  # Strategy
  # Bootstrapper setup
 == Extension interface ==
+The extension interface defines the extension points which are called by the bootstrapper. The custom extension interface must inherit from `IExtension`. A very basic extension interface could look like the following:
+
+{{{
+    public interface ICustomExtension : IExtension
+    {
+        void Start();
+        void Stop();
+    }
+}}}
+The extension interface above would indicate that the applications extension points are:
+ * Start
+ * Stop
 
 = Customization =
