--- a/wiki/BootstrapperTutorial.wiki
+++ b/wiki/BootstrapperTutorial.wiki
@@ -18,5 +18,20 @@ The extension interface defines the extension points which are called by the boo
 The extension interface above would indicate that the applications extension points are:
  * Start
  * Stop
+That's basically it for the extension interface. Although we generally advice to build a base class which defines virtual members for the extension points. For example:
 
+{{{
+    public abstract class CustomExtensionBase : ICustomExtension
+    {
+        public string Name
+        {
+            get { return this.GetType().FullNameToString(); }
+        }
+
+        public virtual void Start() { }
+        public virtual void Shutdown() { }
+        public abstract string Describe();
+    }
+}}}
+This allows inheritors to override only the extension points that they are interested in.
 = Customization =
